apps/code-server/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: code-server-strip-prefix
  namespace: jupyter
spec:
  stripPrefix:
    prefixes:
      - /code

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: code-server
  namespace: jupyter
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: >-
      jupyter-code-server-strip-prefix@kubernetescrd
spec:
  ingressClassName: traefik

  rules:
    - http:
        paths:
          - path: /code
            pathType: Prefix
            backend:
              service:
                name: code-server
                port:
                  number: 8080
